loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:7: error: identifier expected but '}' found.
                            if (c>2) {gauche():}
                                               ^